--- a/src/main/webapp/css/first-time.css
+++ b/src/main/webapp/css/first-time.css
@@ -2,14 +2,12 @@
 
 .body {
     position: relative;
-    width: 720px;
     height: 850px;
-    margin: 20px auto;
-    margin-top: 35px;
+    margin: 35px auto 20px;
     border: 1px solid #dddd;
     border-radius: 18px;
     overflow: hidden;
-    box-shadow: rgb(0 0 0 / 24%) 0px 3px 8px;
+    box-shadow: rgb(0 0 0 / 24%) 0 3px 8px;
 }
 
 .box-2 {
@@ -34,48 +32,57 @@
     }
 }
 
-.lblTitle {
+.title-label {
     margin-left: 30%;
     font-family: fantasy;
     font-size: 47px;
 }
 
-.inputUaP {
+.question-header {
+    margin-top: 8px;
+    margin-left: 25%;
+    font-family: monospace;
+}
+
+.border-input {
     height: 40px;
     width: 316px;
     float: left;
     border-radius: 10px;
+    margin-left: 59.2%;
     margin-right: 5px;
     padding: 10px;
 }
 
-.btnlogin {
+.center-div {
+    margin-left: 37%;
+}
+
+.border-button {
     margin-top: 15px;
-    margin-left: 130px;
+    margin-right: 10px;
     height: 40px;
     width: 70px;
     border-radius: 15px;
     box-shadow: 0 5px #999;
 }
 
-.btnlogin:hover {
+.login-button:hover {
     background-color: slategrey;
 }
 
-.button:active {
+.login-button:active {
     background-color: slategrey;
     box-shadow: 0 5px #666;
     transform: translateY(4px);
 }
 
-#noti {
-    margin-top: 15px;
-    margin-left: 27px;
-    margin-right: 27px;
-    font-family: inherit;
-    font-size: 15px;
-    font-style: inherit;
-    text-align: center;
+.question-select-list {
+    margin-left: 60.5%;
+    width: 316px;
+}
+
+.error-alert {
     color: #fe2929;
 }
 
@@ -83,14 +90,3 @@ body {
     background: #184e8e linear-gradient(135deg, #fe2929, #ffb3c5);
 }
 
-.question {
-
-}
-
-.questionSelect {
-    margin-left: 0.5%;
-}
-
-.answer {
-    margin-top: 10px;
-}
