--- a/src/main/webapp/css/first-time.css
+++ b/src/main/webapp/css/first-time.css
@@ -10,6 +10,10 @@
     box-shadow: rgb(0 0 0 / 24%) 0 3px 8px;
 }
 
+.container {
+    width: 740px;
+}
+
 .box-2 {
     width: 100%;
     background-color: beige;
